# livechart

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  livechart.py  pyproject.toml
data/: livechart.desktop
dev_util/: blitest.py  gtk4bed.py  gtk4db_noui.py  lister.py  plt.py
gsettings/: org.greyltc.livechart.gschema.xml
src/livechart/: __init__.py  db.py  db_writer.py  lib.py  ncurses_viewer.py  server.py
src/livechart/viewers/: __init__.py  gtk3.py  gtk4.py  gtk4_2.py  gtk4db.py  gtk4db_noui.py  ncurses.py
src/livechart/viewers/ui3/: __init__.py  livechart.cmb.ui
src/livechart/viewers/ui4/: __init__.py  livechart.cmb.ui  livechart.ui  win.ui.xml
tests/: __init__.py  test_lib.py  test_server.py  test_viewers.py
