[build-system]
requires = [
  "setuptools @ git+https://github.com/pypa/setuptools@experimental/support-pyproject",
  "wheel",
]

[project]
name = "livechart"
version = "2022.3.22"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["plot", "live", "realtime", "data"]
authors = [
  {name = "Greyson Christoforo", email = "grey@christoforo.net"}
]
maintainers = [
  {name = "Greyson Christoforo", email = "grey@christoforo.net"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

#dynamic = ['version', 'description']

dependencies = [
  "asciichartpy"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]"
]

[project.urls]
homepage = "https://github.com/greyltc-org/livechart"
documentation = "https://github.com/greyltc-org/livechart/blob/master/README.md"
repository = "https://github.com/greyltc-org/livechart.git"
changelog = "https://github.com/greyltc-org/livechart/blob/master/CHANGELOG.md"

[project.scripts]
livechart-cli = "livechart.viewers.ncurses:main"

[project.gui-scripts]
livechart = "livechart.viewers.gtk4:main"
livechart-gui = "livechart.viewers.gtk4:main"
livechart-gtk3 = "livechart.viewers.gtk3:main"
livechart-gtk4 = "livechart.viewers.gtk4:main"

[tool.black]
line-length = 999999

# could format like this in case black isn't doing its job: `python -m yapf --recursive --in-place .`
#[tool.yapf]
#column_limit = 999999
