[build-system]
requires = ["hatchling>=1.10.0", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "livechart"
description = "Realtime data plotting with python"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
keywords = [
  "postgresql",
  "database",
  "live",
  "realtime",
  "data",
  "science",
  "plot",
]
authors = [
  { name="Greyson Christoforo", email="grey@christoforo.net" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "psycopg>=3.0",
  "PyGObject",
  "pycairo"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greyltc-org/livechart"
Tracker = "https://github.com/greyltc-org/livechart/issues"
Source = "https://github.com/greyltc-org/livechart.git"

[tool.hatch.version]
source = "vcs"

[project.gui-scripts]
livechart = "livechart.viewers.gtk4db_noui:main"


[tool.hatch.build]
ignore-vcs = true
include = [
  "src/*.py",
  "src/livechart/*.py",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 999999
